# CRUD

./: docker-compose.yml  pyproject.toml
backend/: crud.py  database.py  main.py  models.py  router.py  schemas.py
